# openapi.json
@@ -5,6 +5,22 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/save_docs": {
+            "post": {
+                "summary": "Save Api Json",
+                "operationId": "save_api_json_save_docs_post",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/static_api/generate_exercise": {
             "post": {
                 "summary": "Handle Generate",
